--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
     <string name="app_name">PDM_Parcial1</string>
-    <string-array name="number">
-        <item>1</item>
-        <item>2</item>
-        <item>3</item>
-    </string-array>
+    <string name="sampleDate">dd/mm/yyyy</string>
+    <string name="sampleTime">hh:mm</string>
+    <string name="sampleName1">Equipo 1</string>
+    <string name="sampleName2">Equipo 2</string>
+    <string name="sampleResult">0</string>
+    <string name="gano">Ganador: </string>
 </resources>
